# chip-8

./: CMakeLists.txt  display.c  display.h  input.c  input.h  instructions.c  main.c  memory.h
include/: cpu.h  input.h  instructions.h  memory.h
src/: cpu.c  display.c  input.c  instructions.c  main.c  memory.c
